objects/CodeScan_Organization__c.object
<CustomObject>
    <fields>
        <fullName>AEP_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to indicate that cloud org is a SFAEP free org</description>
        <label>AEP License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CodeScan_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Link__c</fullName>
        <label>App Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <label>Billing Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Cloud_Members__c</fullName>
        <label>Count of Cloud Members</label>
        <summaryForeignKey>CodeScan_User__c.Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ide_Count__c</fullName>
        <label>IDE Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Member_Login__c</fullName>
        <label>Last Member Login</label>
        <summarizedField>CodeScan_User__c.LastLogin__c</summarizedField>
        <summaryForeignKey>CodeScan_User__c.Organization__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loc__c</fullName>
        <label>LOC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Count__c</fullName>
        <label>Project Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Projects__c</fullName>
        <label>Public Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Size__c</fullName>
        <label>Team Size</label>
        <summaryForeignKey>CodeScan_User__c.Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trial_Ends__c</fullName>
        <label>Trial Ends</label>
        <type>DateTime</type>
    </fields>
    <label>Cloud Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CodeScan_Org_Id__c</columns>
        <columns>Key__c</columns>
        <columns>Last_Member_Login__c</columns>
        <columns>Loc__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Trial_Ends__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Count_of_Cloud_Members__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cloud_Organizations_to_Filter</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CodeScan_Org_Id__c</columns>
        <columns>Key__c</columns>
        <columns>Last_Member_Login__c</columns>
        <columns>Loc__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Trial_Ends__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Count_of_Cloud_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Volk</value>
        </filters>
        <label>Cloud Organizations to Filter</label>
    </listViews>
    <nameField>
        <label>CodeScan Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>